# hello_ops

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
tests/: test_health.py
