[project]
name = "hello-ops"
version = "0.1.0"
description = "Minimal FastAPI app for DevOps learning"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
